# com.nicodevelop.blackbox

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Makefile  alembic.ini  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  sitemap.xml
.claude/commands/: dev-workflow.md
.claude/skills/commit/: SKILL.md
.claude/skills/explore-review/: SKILL.md
.claude/skills/explore-status/: SKILL.md
.claude/skills/explore-yolo/: SKILL.md
.github/workflows/: docs.yml
api/endpoints/: index.html
architecture/: index.html
claude/yolo-mode/: index.html
cli/commands/: index.html
data/calendar/: index.html
data/scoring/: index.html
docs/: architecture.md  getting-started.md  index.md
docs/api/: endpoints.md
docs/claude/: yolo-mode.md
docs/cli/: commands.md
docs/data/: calendar.md  scoring.md
getting-started/: index.html
scripts/: yolo-launcher.sh
search/: search_index.json
src/blackbox/: __init__.py
src/blackbox/api/: __init__.py  main.py
src/blackbox/cli/: __init__.py  main.py
src/blackbox/core/: __init__.py  logging.py
src/blackbox/core/scoring/: __init__.py  calculator.py  config.py  service.py
src/blackbox/data/: __init__.py  config.py  event_mapping.py  exceptions.py  models.py  normalizer.py  scoring.py  services.py
src/blackbox/data/scraper/: __init__.py  base.py  browser.py  forex_factory.py
src/blackbox/data/storage/: __init__.py  database.py  models.py  repository.py
src/blackbox/data/storage/migrations/: env.py
tests/: __init__.py  conftest.py
tests/api/: test_api.py
tests/cli/: test_cli.py
tests/core/: test_core.py
tests/core/scoring/: __init__.py  conftest.py  test_calculator.py  test_service.py
tests/data/: conftest.py  test_config.py  test_event_mapping.py  test_forex_factory.py  test_models.py  test_normalizer.py  test_scoring.py  test_services.py
tests/data/storage/: conftest.py  test_repository.py
(+3 files in other folders)
